[package]
name = "lytbokkchoyx"
version = "0.2.3"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
